--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+body {
+  background: url(https://cdn.wallpapersafari.com/16/51/qzgYOL.jpg);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: covers;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
+  justify-content: center; /*가로중앙*/
+  align-items: center; /*세로중앙*/
+  height: 100vh;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.weather-box {
+  border: 3px solid white;
+  padding: 50px;
+  border-radius: 30px;
+  background-color: azure;
+  opacity: 0.7;
+  /* margin-bottom: 30px */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather-box h3 {
+  margin-bottom: 20px;
+}
+
+.weather-box p {
+  line-height: 10px;
+}
+
+.btn {
+  margin: 20px;
+}
+
+.btn button {
+  color: cornflowerblue;
+}
+
+.btn button:hover {
+  color: black;
 }
